1999-01-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* TclInterp.m ([TclInterp -checkPath:subdirectory:file:]): 
	Add subdirectory argument.

	* T{cl,k}Interp.m ([T{cl,k}Interp -checkT{cl,k}Library]): Use above
	and secondaryPath as base for t{cl,k}8.0 instead of as an explicit
	path.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT, AGE): Bump.  Clear revision.

1999-01-07  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (tcllibdir): Substitute.
	(TCL_VERSION): Extract from tclConfig.sh.
	(TCL_PREFIX): Extract from tclConfig.sh.
	(TCL_LIBRARY): Set to $(TCLPREFIX)/lib/tcl$(TCL_VERSION).
	(CPPFLAGS): Define TCL_LIBRARY.

	* TclInterp.m (checkLibrary): Default to TCL_LIBRARY cpp symbol
	if tcl_library is not set.

	* TkInterp.m ([TkInterp -preInitWithArgc:argv:]): Set up tclobjc_newTk
	global flag that is set by tkInit (if run).  Then, after Tk_Init,
	source tk.tcl if it is set.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* TkInterp.m: Include stdlib.h.
	([TkInterp -checkTkLibrary]): Use TK_LIBRARY as base path for tk.tcl
	then try secondaryPath.
	([TkInterp -preInitWithArgc:argv:]): Don't retry.  Set them from
	check{Tcl,Tk} or fail.

	* TkInterp.h: Declare checkTkLibrary.

	* TclInterp.m ([TclInterp -preInitWithArgc:argv:]): Set tcl_library
	if path is set, else raise error.
	([TclInterp -checkTclLibrary]): Don't set tcl_library here.

	* Makefile.am (tklibdir): Substitute.
	(TK_VERSION): Extract from tkConfig.sh.
	(TK_PREFIX): Extract from tkConfig.sh.
	(TK_LIBRARY): Set to $(TKPREFIX)/lib/tk$(TK_VERSION).
	(CPPFLAGS): Define TK_LIBRARY.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am: Add -Wno-implicit-int to OBJCFLAGS instead of
	CPPFLAGS.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CPPFLAGS): Add -Wno-implicit-int.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.