@@ -2,6 +2,8 @@
 
 	* TclInterp.m ([TclInterp -checkPath:subdirectory:file:]): 
 	Add subdirectory argument.
+	([TclInterp -checkPath:subdirectory:file:]): Don't append / if
+	there already is one.
 
 	* T{cl,k}Interp.m ([T{cl,k}Interp -checkT{cl,k}Library]): Use above
 	and secondaryPath as base for t{cl,k}8.0 instead of as an explicit
